--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,7 @@
         <activity android:name=".screen.toprate.TopRatedActivity"/>
         <activity android:name=".screen.nowplaying.NowPlayingActivity"/>
         <activity android:name=".screen.upcoming.UpComingActivity"/>
+        <activity android:name=".screen.video.VideoActivity"
+            android:screenOrientation="landscape"/>
     </application>
 </manifest>
